added nav and logo

--- a/index.html
+++ b/index.html
@@ -12,6 +12,18 @@
 </head>
 
 <body>
+    <header class="wrapper">
+<img class="logo" src="img/lambda-black.png"/>
+ <nav>
+<a class ="navlinks" href="#">Home</a>
+<a class ="navlinks" href="#">About</a>
+<a class ="navlinks" href="#">Products</a>
+<a class ="navlinks" href="#">Blog</a>
+<a class ="navlinks" href="#">Contact</a>
+    </nav>
+    </header>
+    <img class="image" src="img/jumbo.jpg"/>
+    
     <div class="container">
    
         <section class="top-content">
