added about page

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 
 <body>
     <header class="wrapper">
-<img class="logo" src="img/lambda-black.png"/>
+<a href="#home"><img class="logo" src="img/lambda-black.png"/></a>
  <nav>
-<a class ="navlinks" href="#">Home</a>
-<a class ="navlinks" href="#">About</a>
-<a class ="navlinks" href="#">Products</a>
-<a class ="navlinks" href="#">Blog</a>
-<a class ="navlinks" href="#">Contact</a>
+<a class ="navlinks" href="#home">Home</a>
+<a class ="navlinks" href="about.html">About</a>
+<a class ="navlinks" href="#products">Products</a>
+<a class ="navlinks" href="#blog">Blog</a>
+<a class ="navlinks" href="#contact">Contact</a>
     </nav>
     </header>
     <img class="image" src="img/jumbo.jpg"/>
